/*
 * Backpack - Skyscanner's Design System
 *
 * Copyright 2016 Skyscanner Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/* @flow strict */

import React from 'react';
import { render } from '@testing-library/react';

import BpkSplitInput from './BpkSplitInput';

const defaultProps = {
  name: 'otpInput',
  id: 'otpInput',
  label: 'otp input',
  onChange: () => {},
  onSubmit: () => {},
};

describe('BpkSplitInput', () => {
  it('should render without crashing', () => {
    const wrapper = render(<BpkSplitInput {...defaultProps} />);

    expect(wrapper).toMatchSnapshot();
  });

  it('should render correctly with inputLength param', () => {
    const wrapper = render(<BpkSplitInput {...defaultProps} inputLength={6} />);

    expect(wrapper).toMatchSnapshot();
  });

  it('should render correctly with large set as false', () => {
    const wrapper = render(<BpkSplitInput {...defaultProps} large={false} />);

    expect(wrapper).toMatchSnapshot();
  });

  it('should render correctly with placeholder', () => {
    const wrapper = render(<BpkSplitInput {...defaultProps} placeholder="x" />);

    expect(wrapper).toMatchSnapshot();
  });
});
